# JTP_PROJECT

./: .docker-ignore  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  run_ollama.sh
backend/: .env.example  .gitignore  README.md  constants.py  crud_app.py  database.py  inference_app.py  pyproject.toml  requirements-crud.txt  requirements-inference.txt  settings.py
backend/data/: load_projects.py  sql_app.db
backend/data/weights/: project_profiles.npy  project_text_embs.npy  two_tower_model.keras
backend/dataset_generation/: 1_process_data_with_llm.py  2_generate_training_dataset.py  3_ingest_data_to_sqlite.py  helpers.py  llm_config.py  settings.py
backend/dataset_generation/data/: jobs_scraped.csv
backend/dataset_generation/outputs/: interactions.json  output_employee_mapping.json  output_projects_data.json  output_projects_mapping.json  output_projects_parsed.json
backend/models/: two_tower.py
backend/routes/: analysis.py  crud.py  predict.py
backend/schemas/: crud.py  orm.py  predict.py
backend/services/: crud.py  predict.py
docker/: Dockerfile.crud  Dockerfile.inference  Dockerfile.ollama
frontend/: .env.example  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/api/analysis/: route.ts
frontend/src/app/api/recommendations/: route.ts
frontend/src/app/profile/: page.tsx
frontend/src/app/recommendations/: page.tsx
frontend/src/components/: add-skill-dialog.tsx  skill-form.tsx  skills-data-table.tsx
frontend/src/types/: skill.tsx
